@@ -17,20 +17,22 @@ package org.apache.solr.core;
  * limitations under the License.
  */
 
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Properties;
+
 import org.apache.solr.common.SolrException;
 import org.apache.solr.logging.LogWatcherConfig;
 import org.apache.solr.update.UpdateShardHandlerConfig;
-
-import java.util.Properties;
 
 
 public class NodeConfig {
 
   private final String nodeName;
 
-  private final String coreRootDirectory;
+  private final Path coreRootDirectory;
 
-  private final String configSetBaseDirectory;
+  private final Path configSetBaseDirectory;
 
   private final String sharedLibDirectory;
 
@@ -58,7 +60,7 @@ public class NodeConfig {
 
   private final String managementPath;
 
-  private NodeConfig(String nodeName, String coreRootDirectory, String configSetBaseDirectory, String sharedLibDirectory,
+  private NodeConfig(String nodeName, Path coreRootDirectory, Path configSetBaseDirectory, String sharedLibDirectory,
                      PluginInfo shardHandlerFactoryConfig, UpdateShardHandlerConfig updateShardHandlerConfig,
                      String coreAdminHandlerClass, String collectionsAdminHandlerClass,
                      String infoHandlerClass, String configSetsHandlerClass,
@@ -94,7 +96,7 @@ public class NodeConfig {
     return nodeName;
   }
 
-  public String getCoreRootDirectory() {
+  public Path getCoreRootDirectory() {
     return coreRootDirectory;
   }
 
@@ -158,7 +160,7 @@ public class NodeConfig {
     return managementPath;
   }
 
-  public String getConfigSetBaseDirectory() {
+  public Path getConfigSetBaseDirectory() {
     return configSetBaseDirectory;
   }
 
@@ -187,8 +189,8 @@ public class NodeConfig {
 
   public static class NodeConfigBuilder {
 
-    private String coreRootDirectory = "";
-    private String configSetBaseDirectory = "configsets";
+    private Path coreRootDirectory;
+    private Path configSetBaseDirectory;
     private String sharedLibDirectory = "lib";
     private PluginInfo shardHandlerFactoryConfig;
     private UpdateShardHandlerConfig updateShardHandlerConfig = UpdateShardHandlerConfig.DEFAULT;
@@ -219,16 +221,17 @@ public class NodeConfig {
     public NodeConfigBuilder(String nodeName, SolrResourceLoader loader) {
       this.nodeName = nodeName;
       this.loader = loader;
-      this.coreRootDirectory = loader.getInstanceDir();
+      this.coreRootDirectory = Paths.get(loader.getInstanceDir());
+      this.configSetBaseDirectory = Paths.get(loader.getInstanceDir()).resolve("configsets");
     }
 
     public NodeConfigBuilder setCoreRootDirectory(String coreRootDirectory) {
-      this.coreRootDirectory = loader.resolve(coreRootDirectory);
+      this.coreRootDirectory = Paths.get(loader.getInstanceDir()).resolve(coreRootDirectory);
       return this;
     }
 
     public NodeConfigBuilder setConfigSetBaseDirectory(String configSetBaseDirectory) {
-      this.configSetBaseDirectory = configSetBaseDirectory;
+      this.configSetBaseDirectory = Paths.get(loader.resolve(configSetBaseDirectory));
       return this;
     }
 
