@@ -498,6 +498,8 @@ Other Changes
 * SOLR-8259: Deprecate JettySolrRunner.getDispatchFilter(), add
   .getSolrDispatchFilter() and .getCoreContainer() (Alan Woodward)
 
+* SOLR-8278: Use NIO2 APIs in ConfigSetService (Alan Woodward)
+
 ==================  5.3.1 ==================
 
 Bug Fixes
